Se agrega la funcionalidad que actualice la tabla que nos está mostrando cada vez que se haga un cambio, se utilizó Ajax para esto, se agrega la funcionalidad que valide si el usuario que está iniciando sesión está o no activo, se agrega la funcionalidad que envíe la trazabilidad de correo al encargado de covial al momento de crearse la OT

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-editor.dbconn=jdbc:mysql://localhost:3306/mysql?zeroDateTimeBehavior=convertToNull [root en Sistema por omisi\u00f3n]
 browser.id=default
 copy.src.files=false
 copy.src.on.open=false
